; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_events.c_doc_load_string.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_events.c_doc_load_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@notif_doc = common dso_local global i32* null, align 8
@FALSE = common dso_local global i32 0, align 4
@doc_complete = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@IID_IPersistStreamInit = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @doc_load_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @doc_load_string(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i32*, i32** %3, align 8
  store i32* %9, i32** @notif_doc, align 8
  %10 = load i32, i32* @FALSE, align 4
  store i32 %10, i32* @doc_complete, align 4
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @strlen(i8* %11)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @GlobalAlloc(i32 0, i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @memcpy(i32 %15, i8* %16, i32 %17)
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* @TRUE, align 4
  %21 = call i32 @CreateStreamOnHGlobal(i32 %19, i32 %20, i32** %6)
  %22 = load i32*, i32** %3, align 8
  %23 = bitcast i32** %5 to i8**
  %24 = call i32 @IHTMLDocument2_QueryInterface(i32* %22, i32* @IID_IPersistStreamInit, i8** %23)
  %25 = load i32*, i32** %5, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @IPersistStreamInit_Load(i32* %25, i32* %26)
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @IPersistStreamInit_Release(i32* %28)
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @IStream_Release(i32* %30)
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @GlobalAlloc(i32, i32) #1

declare dso_local i32 @memcpy(i32, i8*, i32) #1

declare dso_local i32 @CreateStreamOnHGlobal(i32, i32, i32**) #1

declare dso_local i32 @IHTMLDocument2_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i32 @IPersistStreamInit_Load(i32*, i32*) #1

declare dso_local i32 @IPersistStreamInit_Release(i32*) #1

declare dso_local i32 @IStream_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
